--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>File Upload</title>
 	</head>
 	<body>
+		<div class="TextField">
+			<form name = "search" action = "/show" method = "POST">
+				<label> Text: </label> 
+  				<input type="text" id="pin" name="txt"  size=70>
+				<input type = "submit" value = "submit">
+			</form>
+		<div>
 		<form id="uploadbanner" enctype="multipart/form-data" method="post" action="#">
    			<input id="fileupload" name="myfile" type="file" />
    			<input type="submit" value="submit" id="submit" />
