--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	</head>
 	<body>
 		<div class="TextField">
-			<form name = "search" action = "/show" method = "POST">
+			<form name = "search" action = "/send" method = "POST">
 				<label> Text: </label> 
-  				<input type="text" id="pin" name="txt"  size=70>
+  				<input type="text" id="pin" name="numbers"  size=70>
 				<input type = "submit" value = "submit">
 			</form>
 		<div>
