trying out input table

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title>File Upload</title>
+		  <link rel="stylesheet" href="index.css">
+
 	</head>
 	<body>
 		<div class="TextField">
@@ -15,5 +17,44 @@
    			<input id="fileupload" name="myfile" type="file" />
    			<input type="submit" value="submit" id="submit" />
 		</form>
+		<div contenteditable=true>
+  <table>
+    <tr>
+      <td>1</td>
+      <td>2</td>
+      <td>3</td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td>5</td>
+      <td>6</td>
+    </tr>
+    <tr>
+      <td>7</td>
+      <td>8</td>
+      <td>9</td>
+    </tr>
+  </table>
+</div>
+<table class="table table-bordered">
+    <thead>
+        <tr>
+            <td colspan="2"><input type="text" ></td>
+            <td colspan="2"><input type="text" ></td>
+            <td colspan="2"><input type="text" ></td>
+        </tr>
+        <tr>
+            <td colspan="2"><input type="text" ></td>
+            <td colspan="2"><input type="text" ></td>
+            <td colspan="2"><input type="text" ></td>
+        </tr>
+        <tr>
+            <td colspan="2"><input type="text" ></td>
+            <td colspan="2"><input type="text" ></td>
+            <td colspan="2"><input type="text" ></td>
+        </tr>
+    </thead>
+    
+</table>
 	</body>
 </html>
