flask can now take in the matrix of input

--- a/index.html
+++ b/index.html
@@ -7,67 +7,193 @@
    <body>
       <div class="TextField">
       <form name = "search" action = "/send" method = "POST">
+        <div class = "column1">
          <table>
-            <tr class = "box1">
-               <td><input type="text" id="pin" name="numbers"  size=3></td>
-               <td><input type="text" id="pin" name="numbers"  size=3></td>
-               <td><input type="text" id="pin" name="numbers"  size=3></td>
+            <tr class = "box">
+               <td><input type="text" class = "pin" name="0,0"></td>
+               <td><input type="text" class = "pin" name="1,0"></td>
+               <td><input type="text" class = "pin" name="2,0"></td>
             </tr>
             <tr>
-               <td><input type="text" id="pin" name="numbers"  size=3></td>
-               <td><input type="text" id="pin" name="numbers"  size=3></td>
-               <td><input type="text" id="pin" name="numbers"  size=3></td>
+               <td><input type="text" class = "pin" name="0,1"></td>
+               <td><input type="text" class = "pin" name="1,1"></td>
+               <td><input type="text" class = "pin" name="2,1"></td>
             </tr>
             <tr>
-               <td><input type="text" id="pin" name="numbers"  size=3></td>
-               <td><input type="text" id="pin" name="numbers"  size=3></td>
-               <td><input type="text" id="pin" name="numbers"  size=3></td>
+               <td><input type="text" class = "pin" name="0,2"></td>
+               <td><input type="text" class = "pin" name="1,2"></td>
+               <td><input type="text" class = "pin" name="2,2"></td>
             </tr>
          </table>
          <br>
          <table>
-            <tr class = "box2">
-               <td><input type="text" id="pin" name="numbers"  size=3></td>
-               <td><input type="text" id="pin" name="numbers"  size=3></td>
-               <td><input type="text" id="pin" name="numbers"  size=3></td>
+            <tr class = "box">
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
             </tr>
             <tr>
-               <td><input type="text" id="pin" name="numbers"  size=3></td>
-               <td><input type="text" id="pin" name="numbers"  size=3></td>
-               <td><input type="text" id="pin" name="numbers"  size=3></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
             </tr>
             <tr>
-               <td><input type="text" id="pin" name="numbers"  size=3></td>
-               <td><input type="text" id="pin" name="numbers"  size=3></td>
-               <td><input type="text" id="pin" name="numbers"  size=3></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
             </tr>
          </table>
          <br>
          <table>
-            <tr class = "box3">
-               <td><input type="text" id="pin" name="numbers"  size=3></td>
-               <td><input type="text" id="pin" name="numbers"  size=3></td>
-               <td><input type="text" id="pin" name="numbers"  size=3></td>
+            <tr class = "box">
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
             </tr>
             <tr>
-               <td><input type="text" id="pin" name="numbers"  size=3></td>
-               <td><input type="text" id="pin" name="numbers"  size=3></td>
-               <td><input type="text" id="pin" name="numbers"  size=3></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
             </tr>
             <tr>
-               <td><input type="text" id="pin" name="numbers"  size=3></td>
-               <td><input type="text" id="pin" name="numbers"  size=3></td>
-               <td><input type="text" id="pin" name="numbers"  size=3></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
             </tr>
          </table>
-         <input type = "submit" value = "submit">
-      </form>
+     </div>
+     <br>
+     <div class = "column2">
+         <table>
+            <tr class = "box">
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+            </tr>
+            <tr>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+            </tr>
+            <tr>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+            </tr>
+         </table>
+         <br>
+         <table>
+            <tr class = "box">
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+            </tr>
+            <tr>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+            </tr>
+            <tr>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+            </tr>
+         </table>
+         <br>
+         <table>
+            <tr class = "box">
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+            </tr>
+            <tr>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+            </tr>
+            <tr>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+            </tr>
+         </table>
+     </div>
+     <br>
+      <div class = "column3">
+         <table>
+            <tr class = "box">
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+            </tr>
+            <tr>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+            </tr>
+            <tr>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+            </tr>
+         </table>
+         <br>
+         <table>
+            <tr class = "box">
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+            </tr>
+            <tr>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+            </tr>
+            <tr>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+            </tr>
+         </table>
+         <br>
+         <table>
+            <tr class = "box">
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+            </tr>
+            <tr>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+            </tr>
+            <tr>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+               <td><input type="text" class = "pin" name="numbers"></td>
+            </tr>
+         </table>
+        </div>
+        <input type = "submit" value = "submit">
+        </form>
       <div>
+
+        <!-- FIX THIS -->
+        <script>
+            jQuery('.pin').keyup(function () { 
+            this.value = this.value.replace(/[^0-9\.]/g,'');
+            });
+        </script>
+
+
+
+
+
       <!--
          <div class="TextField">
             <form name = "search" action = "/send" method = "POST">
                 <label> Text: </label> 
-                        <input type="text" id="pin" name="numbers"  size=70>
+                        <input type="text" class = "pin" name="numbers"  =70>
                 <input type = "submit" value = "submit">
             </form>
          <div>
