allowed flask to access css styling

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>File Upload</title>
-      <link rel="stylesheet" href="index.css">
+      <link rel="stylesheet" type="text/css" href="/static/index.css">
    </head>
    <body>
       <div class="TextField">
