removed cell spacing in solution grid

--- a/pass.html
+++ b/pass.html
@@ -8,7 +8,7 @@
 <body>
 	<h1> SOLUTION: </h1>
     <div class="table">
-	<table>
+	<table cellspacing="0">
         <tr>
             {% for num in nums[0] %}
             <td>{{num}}</td>
