fomatted solution grid

--- a/pass.html
+++ b/pass.html
@@ -10,48 +10,69 @@
     <div class="table">
 	<table cellspacing="0">
         <tr>
+            <th></th>
+            <th>1</th>
+            <th>2</th>
+            <th>3</th>
+            <th>4</th>
+            <th>5</th>
+            <th>6</th>
+            <th>7</th>
+            <th>8</th>
+            <th>9</th>
+        </tr>
+        <tr>
+            <th class="letter">A</th>
             {% for num in nums[0] %}
-            <td>{{num}}</td>
+            <td style="border-top: 5px solid black;">{{num}}</td>
             {% endfor %}
         </tr>
         <tr>
+            <th class="letter">B</th>
             {% for num in nums[1] %}
             <td>{{num}}</td>
             {% endfor %}
         </tr>
         <tr>
+            <th class="letter">C</th>
             {% for num in nums[2] %}
             <td>{{num}}</td>
             {% endfor %}
         </tr>
         <tr>
+            <th class="letter">D</th>
             {% for num in nums[3] %}
             <td>{{num}}</td>
             {% endfor %}
         </tr>
         <tr>
+            <th class="letter">E</th>
             {% for num in nums[4] %}
             <td>{{num}}</td>
             {% endfor %}
         </tr>
         <tr>
+            <th class="letter">F</th>
             {% for num in nums[5] %}
             <td>{{num}}</td>
             {% endfor %}
         </tr>
         <tr>
+            <th class="letter">G</th>
             {% for num in nums[6] %}
             <td>{{num}}</td>
             {% endfor %}
         </tr>
         <tr>
+            <th class="letter">H</th>
             {% for num in nums[7] %}
             <td>{{num}}</td>
             {% endfor %}
         </tr>
         <tr>
+            <th class="letter">I</th>
             {% for num in nums[8] %}
-            <td>{{num}}</td>
+            <td style="border-bottom: 5px solid black;">{{num}}</td>
             {% endfor %}
         </tr>
     </table>
