implemented hint system

--- a/pass.html
+++ b/pass.html
@@ -75,5 +75,11 @@
             {% endfor %}
         </tr>
     </table>
+
+    
+            {% for h in hints[hLen] %}
+            <td style="border-bottom: 5px solid black;">{{num}}</td>
+            {% endfor %}
+        
 </body>
 </html>
