rough hint algorithm

--- a/pass.html
+++ b/pass.html
@@ -74,12 +74,16 @@
             <td style="border-bottom: 5px solid black;">{{num}}</td>
             {% endfor %}
         </tr>
+        <!-- HINTS
+        <tr>
+        {% for h in hints %}
+        <td style="border-bottom: 5px solid black;">{{h}}</td>
+        {% endfor %}
+        -->
+        <tr>
     </table>
 
     
-            {% for h in hints[hLen] %}
-            <td style="border-bottom: 5px solid black;">{{num}}</td>
-            {% endfor %}
         
 </body>
 </html>
