--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
    <head>
 
       <title>Sudoku Solver</title>
+      <link rel="shortcut icon" href= "{{ url_for('static', filename = 'favicon.ico')}}"> 
+
       <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
       <script src="/static/script.js"></script>
       <link rel="stylesheet" maxlength = "1" type="text/css" href="/static/index.css">
