--- a/pass.html
+++ b/pass.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang = "en">
 <head>
+      <link rel="shortcut icon" href= "{{ url_for('static', filename = 'favicon.ico')}}"> 
+
 	<meta charset = "UTF-8">
     <link rel="stylesheet" type="text/css" href="/static/pass.css">
 	<title> Result </title>
