--- a/fail.html
+++ b/fail.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 	<h1>NOT SOLVABLE</h1>
-	<a class = "nav-link" href="index.html">GO BACK</a>
+	<form action="/return" method="GET">
+        <button type="submit">Return</button>
+    </form>
         
 </body>
 </html>
